<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeText">Welcome to the Shoe Store inventory App 🥰</string>
    <string name="welcomeSecondaryText">See Amazing Collections of Shoes</string>
    <string name="instructionTitle">Instructions</string>
    <string name="instructionsSecondaryText">Get ready to explore wide variety of shoes. Click Shop Now to continue.</string>
    <string name="shoeName">Name</string>
    <string name="shoeCompany">Company</string>
    <string name="shoeSize">Size</string>
    <string name="shoeDescription">Description</string>
    <string name="createShoeTitle">Add a shoe</string>
    <string name="Save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="myShoes">My Shoes</string>
    <string name="createButtontext">create a shoe</string>
    <string name="emailTitle">Email</string>
    <string name="LoginTitle">Shoe Store Inventory</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="my_shoes">My Shoes</string>
    <!-- Shoe list -->
    <string name="shoe_list">Shoe List</string>
    <string name="empty_list">No shoes to display.</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Company: %s</string>
    <string name="shoe_size">Shoe size: %.1f</string>
    <string name="shoe_description">Description: %s</string>

    <!-- Shoe detail -->
    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_detail_company">Company</string>
    <string name="shoe_detail_size">Shoe size</string>
    <string name="shoe_detail_description">Description</string>
    <string name="save">Save</string>
    <string name="empty_fields_warning">Please fill all fields</string>
</resources>
